[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faang-dsa-course"
version = "1.0.0"
description = "FAANG interview DSA solutions with educational focus"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.7.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-static-i18n>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "mypy>=1.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.poe.tasks]
serve = "mkdocs serve"
build = "mkdocs build"
test = "pytest"
lint = "ruff check ."
format = "ruff format ."

[dependency-groups]
dev = ["poethepoet>=0.40.0"]
